# fairhub-pipeline

./: .env.example  .flake8  .gitignore  .pylint.ini  .pylintrc  Dockerfile  README.md  README_validation.md  app.py  cgm_pipeline.py  cgm_pipeline_parallel.py  check_oct_octa_ids.py  check_spectralis_dicomdir.py  check_stray_folders-dev.py  cirrus_pipeline.py  cirrus_pipeline_parallel.py  cirrus_year3_manual_fix.py  collate.py  compare_folder.py  compare_ids.py  config.py  copying_dir.py  ecg_pipeline.py  ecg_pipeline_parallel.py  ecg_process.py  ecg_requirements.txt  eidon_pipeline.py  eidon_pipeline_parallel.py  env_sensor_pipeline.py  env_sensor_pipeline_parallel.py  es_sensor_id.csv  file_map.py  flio_pipeline.py  flio_pipeline_paralel.py  flio_pipeline_parallel.py  folder_manifest_pipeline.py  function_app.py  garmin_pipeline.py  garmin_pipeline_local.py  garmin_pipeline_old.py  (+37 more)
aireadi/: delete_temp_files.py  dev_process_spectralis.py  preprocess_cirrus_and_pool.py  preprocess_maestro_triton_and_pool.py  preprocess_spectralis_and_pool.py  test.py  zip_env_sensor_and_pool.py  zip_garmin_and_pool.py
apis/: __init__.py  root.py  stage_one_namespace.py
cgm/: cgm.py  cgm_manifest.py  cgm_qc.py  cgm_sanity.py
cirrus/: cirrus.ipynb  cirrus_enface_converter.py  cirrus_enface_converter_functional_groups.py  cirrus_enface_structural_converter.py  cirrus_heightmap_converter.py  cirrus_heightmap_converter_functional_groups.py  cirrus_oct_converter.py  cirrus_retinal_photography_converter.py  cirrus_utils.py  cirrus_volume_converter.py
core/: __init__.py
dev/: check_stray_folders-dev.py  check_stray_folders.py  compare_folder.py  download_folder.py  generate_participants_tsv.py  mini_dataset.py  mini_file_manifest.py  participant_tsv_file_manifest.py  remove_ds_store.py  sas_token.md  t.py  visualization.py
ecg/: ecg_converter.py  ecg_dataplot.py  ecg_metadata.py  ecg_root.py  ecg_standards.py  ecg_utils.py
eidon/: eidon.ipynb
env_sensor/: es_converter.py  es_doc_header.txt  es_metadata.py  es_root.py  es_sensor_id.csv  es_standards.py  es_utils.py  es_utils_plot.py  pipeline_demo_env.ipynb
flio/: flio.ipynb  flio_reader.py  flio_uid_data.json
garmin/: 0_fit_to_csv.sh  1_csv_standard_to_json.sh  Garmin_Read_Activity.py  Garmin_Read_Sleep.py  garmin_deduplicate.py  garmin_deduplicate_parallel.py  garmin_pipeline.py  garmin_sanity.py  metadata.py  metadata_old.py  standarad_heart_rate.py  standarad_oxygen_saturation.py  standarad_physical_activities.py  standarad_physical_activity_calorie.py  standarad_respiratory_rate.py  standarad_sleep_stages.py  standarad_stress.py  standard_heart_rate.py  standard_oxygen_saturation.py  standard_physical_activities.py  standard_physical_activity_calorie.py  standard_respiratory_rate.py  standard_sleep_stages.py  standard_stress.py
imaging/: imaging_cirrus_converter.py  imaging_cirrus_metadata.py  imaging_cirrus_organize.py  imaging_cirrus_root.py  imaging_classifying_rules.py  imaging_create_manifest.ipynb  imaging_eidon_retinal_photography_converter.py  imaging_eidon_retinal_photography_metadata.py  imaging_eidon_retinal_photography_organize.py  imaging_eidon_retinal_photography_root.py  imaging_flio_converter copy.py  imaging_flio_converter.py  imaging_flio_metadata.py  imaging_flio_organize.py  imaging_flio_root.py  imaging_maestro2_triton_converter.py  imaging_maestro2_triton_metadata.py  imaging_maestro2_triton_organize.py  imaging_maestro2_triton_root.py  imaging_optomed_retinal_photography_converter.py  imaging_optomed_retinal_photography_metadata.py  imaging_optomed_retinal_photography_organize.py  imaging_optomed_retinal_photography_root.py  imaging_organize.ipynb  imaging_qc_pixel_check_local.py  imaging_spectralis_converter.py  imaging_spectralis_metadata.py  imaging_spectralis_organize.py  imaging_spectralis_root.py  imaging_standards.py  imaging_utils.py  maestro2_triton_enface_converter_functional_groups.py  maestro2_triton_heightmap_converter_functional_groups.py  maestro2_triton_oct_converter.py  maestro2_triton_retinal_photography_converter.py
maestro2/: maestro2.ipynb  maestro2_triton_enface_converter.py  maestro2_triton_heightmap_converter.py  maestro2_triton_volume_converter.py  maestro2_triton_volume_converter_functional_groups.py
maestro2_triton/: maestro2_triton_enface_converter.py  maestro2_triton_enface_converter_functional_groups.py  maestro2_triton_heightmap_converter.py  maestro2_triton_heightmap_converter_functional_groups.py  maestro2_triton_oct_converter.py  maestro2_triton_oct_converter_functional_groups.py  maestro2_triton_retinal_photography_converter.py  maestro2_triton_volume_converter.py
notebooks/: azure-blob.ipynb
optomed/: optomed.ipynb
organize/: organize_imaging_utils.py
process_pipeline/: cgm_pipeline.py  cirrus_pipeline.py  ecg_pipeline.py  eidon_pipeline.py  flio_pipeline.py  maestro2_pipeline.py
rawdata_etl_stage_0/: raw_data_etl.py
scripts/: cgm.sh  generate-diagrams.mjs
spectralis/: manifest_heidelberg_octa.ipynb  spect.ipynb  spectralis.ipynb  spectralis_imaging_manifest_local.py  spectralis_onh_oct_converter.py  spectralis_onh_oct_converter_functional_groups.py  spectralis_onh_retinal_photography_converter.py  spectralis_organize_files.py  spectralis_pipeline.py  spectralis_ppol_oct_converter.py  spectralis_ppol_oct_converter_functional_groups.py  spectralis_ppol_retinal_photography_converter.py  spectralis_validate_manifests.py
stage_one/: cgm_pipeline.py  ecg_pipeline.py  eidon_pipeline.py  env_sensor_pipeline.py  garmin_pipeline.py  img_identifier_pipeline.py  maestro2_pipeline.py  maestro_2_pipeline.py  optomed_pipeline.py  triton_pipeline.py
tests/: conftest.py
triton/: triton.ipynb
(+52 files in other folders)
